Move correct beta 1 / router 3 versions to lib folder

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
   <body>
     <script type="application/javascript" src="./lib/my-dropdown/my-dropdown.js"></script>
-    <script src="./lib/preact.dev.js"></script>
+    <script src="./lib/preact.x.umd.js"></script>
     <script src="./lib/preact-router.js"></script>
-    <script src="./lib/preact.umd.js"></script>
+    <script src="./lib/preact-unistore.umd.js"></script>
     <!-- WORKS WITH CHROME REACT DEV TOOLS WHEN NEEDED:  
     <script src="..\node_modules\preact\devtools.js"></script> 
     -- DOESN'T WORK BECAUSE I NEED TO MAKE A UMD BUILD:
