upgrading to Preact X beta 2

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <body>
     <script type="application/javascript" src="./lib/my-dropdown/my-dropdown.js"></script>
-    <script src="./lib/preact.x.umd.js"></script>
+    <script src="./lib/preact.umd.js"></script>
     <script src="./lib/preact-router.js"></script>
     <script src="./lib/preact-unistore.umd.js"></script>
     <!-- WORKS WITH CHROME REACT DEV TOOLS WHEN NEEDED:  
