prepare to add hooks to demo

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="./dist/Routes.js"></script>
     <script src="./dist/ReactApiTutorial.js"></script>
     <script src="./dist/ReactTutorial.js"></script>
+    <script src="./dist/ReactHooks.js"></script>
     <script src="./dist/UnistoreDemo.js"></script>
     <script src="./dist/ReactUnistore.js"></script>
     <script src="./dist/StencilWC.js"></script>
