--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="about:blank">
     <link rel="stylesheet" href="./lib/pure-min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <!--link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"-->
   </head>
 
   <body>
-    <script type="application/javascript" src="./lib/my-dropdown/my-dropdown.js"></script>
     <script type="application/javascript" src="./lib/preact.umd.js"></script>
     <script type="application/javascript" src="./lib/hooks.umd.js"></script>
     <script type="application/javascript" src="./lib/preact-router.js"></script>
@@ -30,7 +29,6 @@
     <script src="./dist/ReactHooks.js"></script>
     <script src="./dist/UnistoreDemo.js"></script>
     <script src="./dist/ReactUnistore.js"></script>
-    <script src="./dist/StencilWC.js"></script>
   </body>
 
 </html>
