Test out props.children and copy rc0 code to our lib folder

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <body>
     <script type="application/javascript" src="./lib/preact.umd.js"></script>
     <script type="application/javascript" src="./lib/hooks.umd.js"></script>
+    <!--script type="application/javascript" src="./lib/compat.umd.js"></script-->
     <script type="application/javascript" src="./lib/preact-router.js"></script>
     <script type="application/javascript" src="./lib/preact-unistore.umd.js"></script>
     <!-- WORKS WITH CHROME REACT DEV TOOLS WHEN NEEDED:  
